--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <strong>
             <title>
-                (Coding) Quiz It Up
+                Coding Quiz It Up
             </title>
         </strong>
         
@@ -34,7 +34,7 @@
         </div>
 
         <div id="end-screen" class="hide">
-            <h2>Quiz is done!</h2>
+            <h2>Quiz is Done!</h2>
             <p>
                 Your score is <span id="final-score"></span>
             </p>
